Closed
Bug 1660296
Opened 5 years ago
Closed 5 years ago
Number of copies is ignored when printing from the new UI
Categories
(Core :: Printing: Setup, defect, P1)
Tracking
()
VERIFIED
FIXED
81 Branch
| Tracking | Status | |
|---|---|---|
| firefox81 | --- | verified |
People
(Reporter: jfkthame, Assigned: jfkthame)
References
Details
(Whiteboard: [print2020_v81])
Attachments
(1 file)
STR: open the new print UI, set Copies field to 2, print.
ER: two copies should be printed
AR: only one copy appeared
Note that printing multiple copies works as expected via the system dialog.
Further note: after printing 2 copies via the system dialog, I now get 2 copies when printing from the new UI even after setting the Copies field back to 1. Looks like the value in the printer settings is persisting, and the new UI simply doesn't touch it.
Updated•5 years ago
|
Whiteboard: [print2020_v81]
Updated•5 years ago
|
Severity: -- → S3
Priority: -- → P1
| Assignee | ||
Comment 1•5 years ago
|
||
Updated•5 years ago
|
Assignee: nobody → jfkthame
Status: NEW → ASSIGNED
Pushed by jkew@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/3ea0ca6e6218
Implement Get/SetNumCopies in the macOS print settings backend. r=jwatt
Comment 3•5 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox81:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 81 Branch
Updated•5 years ago
|
Flags: qe-verify+
Comment 4•5 years ago
•
|
||
Reproduced with 81.0a1 (2020-08-20) on macOS 10.15.
Verified fixed with 82.0a1 (2020-08-26) and 81.0b2 on macOS 10.15 and Windows 10.
You need to log in
before you can comment on or make changes to this bug.
Description
•