Bug 1660296 - Implement Get/SetNumCopies in the macOS print settings backend. r=jwatt

Differential Revision: https://phabricator.services.mozilla.com/D87880